@@ -7,3 +7,83 @@ use Games::ABC_Path::Solver::App;
 
 Games::ABC_Path::Solver::App->new({argv => [@ARGV]})->run;
 
+=head1 NAME
+
+abc-path-solve - a solver for ABC Path
+
+=head1 SYNOPSIS
+
+B<abc-path-solve> /path/to/board
+
+=head1 DESCRIPTION
+
+This is a solver for ABC Path ( L<http://www.brainbashers.com/abcpath.asp> ).
+
+=head1 FORMAT
+
+Sample boards can be found in the distribution under C<t/layouts/> .
+
+Here is the description of their formats. The first line should be the
+magic string C<ABC Path Solver Layout Version 1:> , and the next line should
+be a row of 7 letters, the first being a hint for the top-left-to-bottom-right
+perpendicular, the last being a hint for the top-right-to-bottom-left 
+perpendicular and the rest of the letters being vertical hints. 
+
+After that, there are 5 rows of horizontal hints being a letter, 5 spaces
+and another letter. On one of the squares one can put a letter instead of a
+space, to indicate it must be there.
+
+The last row is another row of vertical hints and perpendicular hints.
+
+Here's an example:
+
+    ABC Path Solver Layout Version 1:
+    OWXIBQN
+    J    AK
+    E     L
+    U     F
+    Y     P
+    R     S
+    TVMGCDH
+
+=cut
+
+=head1 SEE ALSO
+
+L<http://www.brainbashers.com/abcpath.asp>
+
+L<Games::Solitaire::BlackHole::Solver::App>
+
+L<Games::Solitaire::BlackHole::Solver::Board>
+
+=head1 COPYRIGHT AND LICENSE
+
+Copyright (c) 2011 Shlomi Fish
+
+Permission is hereby granted, free of charge, to any person
+obtaining a copy of this software and associated documentation
+files (the "Software"), to deal in the Software without
+restriction, including without limitation the rights to use,
+copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the
+Software is furnished to do so, subject to the following
+conditions:
+
+The above copyright notice and this permission notice shall be
+included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
+EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES
+OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND
+NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
+HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
+WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
+OTHER DEALINGS IN THE SOFTWARE.
+
+=head1 AUTHOR
+
+Shlomi Fish, L<http://www.shlomifish.org/>
+
+=cut
+
